--- a/.github/workflows/debug-workflow.yml
+++ b/.github/workflows/debug-workflow.yml
@@ -12,3 +12,6 @@ jobs:
       - run: npm install
       - run: npm run build
       - uses: ./.github/actions/debug-action
+        with:
+          amazing-creature: Octocat
+          
