--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@actions/core": "^1.2.0",
     "@actions/github": "^1.1.0",
     "@types/jest": "^24.0.21",
+    "@types/js-yaml": "^3.12.1",
     "@types/node": "^12.12.3",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
