--- a/.github/actions/debug-action/action.yml
+++ b/.github/actions/debug-action/action.yml
@@ -1,10 +1,13 @@
 name: 'debug-action'
 description: 'Outputs debug information'
-author: 'saptak'
+author: 'jeffrafter'
 inputs:
   amazing-creature:
     description: What kind of amazing creature are you?
     default: person
+outputs:
+  amazing-message:
+    description: We said something nice, this was what we said.
 runs:
   using: 'node12'
   main: './debug.js'
