--- a/.github/workflows/debug-workflow.yml
+++ b/.github/workflows/debug-workflow.yml
@@ -1,3 +1,6 @@
+name: 'Debug workflow'
+on: [push]
+
 jobs:
   build:
     name: Debug
@@ -11,5 +14,3 @@ jobs:
       - uses: ./.github/actions/debug-action
         with:
           amazing-creature: Octocat
-        id: debug
-      - run: echo There was an amazing message - ${{ steps.debug.outputs.amazing-message }}
