Set the debug action output

--- a/.github/workflows/debug-workflow.yml
+++ b/.github/workflows/debug-workflow.yml
@@ -14,3 +14,6 @@ jobs:
       - uses: ./.github/actions/debug-action
         with:
           amazing-creature: Octocat
+        id: debug
+      - run: echo There was an amazing message - ${{ steps.debug.outputs.amazing-message }}
+
